--- a/index.html
+++ b/index.html
@@ -2,10 +2,75 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Client Check In #1</title>
+    <title>Title</title>
+    <link rel="stylesheet" href="less/style.css">
 </head>
 <body>
-<h1>This is our first check in </h1>
+<nav>
+    <img src="images/logo.png" alt="brand">
+    <div id="links">
+        <a href="">Home</a>
+        <a href="">About</a>
+        <a href="">Menu</a>
+        <a href="">Blog</a>
+        <a href="">Contact</a>
+    </div>
+    <div id="menu-button">≡</div>
+    <div id="menu">
+        <a href="">Home</a>
+        <a href="">About</a>
+        <a href="">Menu</a>
+        <a href="">Blog</a>
+        <a href="">Contact</a>
+    </div>
+</nav>
+
+<div id="wrapper">
+    <div id="content">
+        <p class="intro">Thank you for visiting our restaurant. Servos&trade; will take your order and deliver it to you. Please, choose from our menu!</p>
+        <div class="menu-items">
+            <div class="item">
+                <img src="food.jpg" alt="burger">
+                <div class="desc">
+                    <h2>burger with fries</h2>
+                    <p>Please eat this delicious item [insert desc] Please eat this delicious item [insert desc] Please eat this delicious item [insert desc]
+                        Please eat this delicious item [insert desc] Please eat this delicious item [insert desc] Please eat this delicious item [insert desc]
+                        Please eat this delicious item [insert desc] Please eat this delicious item [insert desc] Please eat this delicious item [insert desc]</p>
+                </div>
+            </div>
+            <div class="item">
+                <img src="food.jpg" alt="pho">
+                <div class="desc"><h2>pho</h2><p>Please eat this delicious item [insert desc]</p></div>
+            </div>
+            <div class="item">
+                <img src="food.jpg" alt="kebab">
+                <div class="desc"><h2>shish kebab</h2><p>Please eat this delicious item [insert desc]</p></div>
+            </div>
+            <div class="item">
+                <img src="food.jpg" alt="salad">
+                <div class="desc"><h2>asian chicken salad</h2><p>Please eat this delicious item [insert desc]</p></div>
+            </div>
+            <div class="item">
+                <img src="food.jpg" alt="spaghetti">
+                <div class="desc"><h2>spaghetti with meatballs</h2><p>Please eat this delicious item [insert desc]</p></div>
+            </div>
+            <div class="item">
+                <img src="food.jpg" alt="sashimi">
+                <div class="desc"><h2>sashimi sampler platter</h2><p>Please eat this delicious item [insert desc]</p></div>
+            </div>
+            <div class="item">
+                <img src="food.jpg" alt="chili">
+                <div class="desc"><h2>three-bean chili</h2><p>Please eat this delicious item [insert desc]</p></div>
+            </div>
+            <div class="item">
+                <img src="food.jpg" alt="tikka masala">
+                <div class="desc"><h2>chicken tikka masala</h2><p>Please eat this delicious item [insert desc]</p></div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<footer></footer>
+<script src="app.js"></script>
 </body>
 </html>
-
