--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>ServoCafe</title>
+    <link rel="shortcut icon" href="images/favicon.ico"/>
     <link rel="stylesheet" href="less/style.css">
 </head>
 <body>
 <nav>
-    <img src="images/logo.png" alt="brand">
+    <a href=""><img src="images/logo.png"></a>
     <div id="links">
         <a href="">Home</a>
         <a href="">About</a>
