--- a/index.html
+++ b/index.html
@@ -31,25 +31,37 @@
         <p class="intro">Thank you for visiting our restaurant. Servos&trade; will take your order and deliver it to you. Please, choose from our menu!</p>
         <div class="menu-items">
             <div class="item">
-                <img src="food.jpg" alt="burger">
+                <img src="https://images.japancentre.com/page_elements/image1s/1513/original/sushi-bars-best-japanese-food.jpg?1470240553" alt="sushi">
                 <div class="desc">
-                    <h2>burger with fries</h2>
-                    <p>Please eat this delicious item [insert desc] Please eat this delicious item [insert desc] Please eat this delicious item [insert desc]
-                        Please eat this delicious item [insert desc] Please eat this delicious item [insert desc] Please eat this delicious item [insert desc]
-                        Please eat this delicious item [insert desc] Please eat this delicious item [insert desc] Please eat this delicious item [insert desc]</p>
+                    <h2>sushi</h2>
+                    <p>The word ‘sushi’ refers to any dish made with Japanese rice that has been seasoned with rice vinegar. Common varieties of sushi include makizushi 
+                        (sushi rice and fillings rolled up in nori seaweed), nigiri sushi (shaped, bite-size mounds of sushi rice with single slices of raw fish or similar 
+                        draped over the top) and inarizushi (sushi rice stuffed inside pockets of inari; a type of seasoned, fried tofu).
+                        This delicacy was one of the first Japanese dishes to be exported to the US after the Meiji Restoration in 1868, and since then its popularity 
+                        has steadily increased year after year. </p>
                 </div>
             </div>
             <div class="item">
-                <img src="food.jpg" alt="pho">
-                <div class="desc"><h2>pho</h2><p>Please eat this delicious item [insert desc]</p></div>
+                <img src="https://images.japancentre.com/page_elements/image1s/1514/original/japanese-udon-noodles.jpg?1470240664" alt="udon">
+                <div class="desc"><h2>Udon</h2><p>One of the three main noodle varieties eaten in Japan; udon noodles are thick, chewy, and traditionally made from wheat flour and brine water. 
+                    Udon can be served in a number of different ways (mixed into stir fries, added to hot pots, served cold with a tsuyu or tentsuyu soup base on the side for dipping), but are 
+                    most commonly used in noodle soups, where they are served in a savoury soup broth with different garnishes. Some of the most common udon noodle soup dishes include kitsune udon 
+                    (‘fox udon’, topped with aburaage fried tofu), tempura udon (topped with tempura battered seafood and vegetables), and chikara udon (‘power udon’, topped with grilled mochi 
+                    rice cakes).</p></div>
             </div>
             <div class="item">
-                <img src="food.jpg" alt="kebab">
-                <div class="desc"><h2>shish kebab</h2><p>Please eat this delicious item [insert desc]</p></div>
+                <img src="https://images.japancentre.com/page_elements/image1s/1515/original/tofu-bean-curd.jpg?1470240775" alt="tofu">
+                <div class="desc"><h2>Tofu</h2><p>Although tofu is mainly thought of in Western countries as a health food or vegetarian alternative, in Southeast Asian countries like Japan, 
+                    tofu (particularly silken tofu) is enjoyed by everybody and is a common part of the traditional diet. To answer the question 'what is tofu?', it is soy milk that has been 
+                    coagulated, with the resulting curds being pressed into blocks. These blocks come in differing levels of firmness, and can be eaten uncooked (perhaps with a couple of savoury 
+                    garnishes), boiled in hot pots, or fried into tasty pieces of aburaage and used as a garnish. [insert desc]</p></div>
             </div>
             <div class="item">
-                <img src="food.jpg" alt="salad">
-                <div class="desc"><h2>asian chicken salad</h2><p>Please eat this delicious item [insert desc]</p></div>
+                <img src="https://images.japancentre.com/page_elements/image1s/1516/original/fried-tempura-battered-prawns.jpg?1470240897" alt="tempura">
+                <div class="desc"><h2>Tempura</h2><p>If you enjoy crispy fried foods, then you will love tempura. Tempura are pieces or slices of meat, fish, and/or vegetables that have been covered in 
+                    a special tempura batter and deep fried until they become crunchy and pale gold in colour. Tempura tends to be made from either small shellfish like prawns, or vegetables like green 
+                    beans, pumpkin, daikon mooli radish, and sweet potato. Tempura can be eaten by itself (perhaps with a little grated daikon and a small dish of tsuyu for dipping), or served on top of 
+                    rice bowls or noodle soups. [insert desc]</p></div>
             </div>
             <div class="item">
                 <img src="food.jpg" alt="spaghetti">
@@ -60,12 +72,16 @@
                 <div class="desc"><h2>sashimi sampler platter</h2><p>Please eat this delicious item [insert desc]</p></div>
             </div>
             <div class="item">
-                <img src="food.jpg" alt="chili">
-                <div class="desc"><h2>three-bean chili</h2><p>Please eat this delicious item [insert desc]</p></div>
+                <img src="https://images.japancentre.com/page_elements/image1s/1517/original/yakitori-japanese-skewered-chicken.jpg?1470241052" alt="yakitori">
+                <div class="desc"><h2>Yakitori</h2><p>With a name literally meaning ‘barbecued chicken’, yakitori are small skewers of bite-size chicken pieces seasoned with salt or brushed with a sauce, or tare, 
+                    of mirin rice wine, soy sauce, sake alcohol, and sugar. There are many different types of yakitori, but the most common varieties are momo (chicken thigh), negima (chicken and spring onion), and 
+                    tsukune (chicken meatballs). [insert desc]</p></div>
             </div>
             <div class="item">
-                <img src="food.jpg" alt="tikka masala">
-                <div class="desc"><h2>chicken tikka masala</h2><p>Please eat this delicious item [insert desc]</p></div>
+                <img src="https://images.japancentre.com/page_elements/image1s/1520/original/donburi-rice-bowl.jpg?1470241437" alt="donburi">
+                <div class="desc"><h2>Donburi</h2><p>Donburi is made by preparing (normally by simmering or frying) various meat, fish and vegetables and serving over steamed rice in large bowls (also called 'donburi'). 
+                    While donburi can be made using just about any assortment of ingredients, the most common types include oyakodon (simmered chicken, egg, and green onion), gyudon (sliced beef and onion simmered in a 
+                    soy sauce soup base), tendon (fried tempura pieces drizzled in tsuyu), and katsudon (breaded and deep-fried pork cutlets, or tonkatsu, simmered in tsuyu with onion and egg). [insert desc]</p></div>
             </div>
         </div>
     </div>
