--- a/index.html
+++ b/index.html
@@ -64,12 +64,17 @@
                     rice bowls or noodle soups. [insert desc]</p></div>
             </div>
             <div class="item">
-                <img src="food.jpg" alt="spaghetti">
-                <div class="desc"><h2>spaghetti with meatballs</h2><p>Please eat this delicious item [insert desc]</p></div>
+                <img src="https://images.japancentre.com/page_elements/image1s/1521/original/natto-fermented-soy-bean-marmite.jpg?1470241491" alt="natto">
+                <div class="desc"><h2>Natto</h2><p>This traditional Japanese food is made by fermenting soy beans in a special type of bacteria that is naturally produced in the human gastrointestinal tract. 
+                    Natto has a strong smell similar to mouldy cheese, as well as a sticky/slimy texture that many find off-putting. However, many other people love these fermented soy beans for their full-bodied 
+                    salty and savoury (or umami) flavour and their ample nutritional value. [insert desc]</p></div>
             </div>
             <div class="item">
-                <img src="food.jpg" alt="sashimi">
-                <div class="desc"><h2>sashimi sampler platter</h2><p>Please eat this delicious item [insert desc]</p></div>
+                <img src="https://images.japancentre.com/page_elements/image1s/1522/original/oden-japanese-soup-winter-hot-pot.jpg?1470241591" alt="oden">
+                <div class="desc"><h2>Oden</h2><p>No cold Japanese winter would be complete without oden. This winter hot pot dish, or nabemono, is made by taking an assortment of vegetables and proteins (including 
+                    processed fish cakes, mochi rice cakes, boiled eggs, daikon radish, konjac yam and tofu), and stewing them in a light broth seasoned with soy sauce and dashi (a soup stock made from infusions of 
+                    bonito fish flakes, kombu kelp seaweed, and/or other savoury ingredients) in a large hot pot at the centre of a table. Diners can then scoop out their favourite pieces and enjoy with karashi mustard 
+                    and other condiments. As well as being a hearty main meal, the simmering hot pot also serves as a communal heater on cold evenings. [insert desc]</p></div>
             </div>
             <div class="item">
                 <img src="https://images.japancentre.com/page_elements/image1s/1517/original/yakitori-japanese-skewered-chicken.jpg?1470241052" alt="yakitori">
