--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
     </div>
 </nav>
 
+<div id ="dish">
+    <div id = "animation">
+        <img src="animation/2.png" alt="welcome robot">
+    </div>
+    <p>WELCOME TO SERVOCAFE.</p>
+</div>
+
 <div id="wrapper">
     <div id="content">
         <p class="intro">Thank you for visiting our restaurant. Servos&trade; will take your order and deliver it to you. Please, choose from our menu!</p>
