--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         <img src="animation/2.png" alt="welcome robot">
     </div>
     <p>WELCOME TO SERVOCAFE.</p>
+    <div id="animationimage">
+        <img src="images/banner.png" alt="banner">
+    </div>
 </div>
 
 <div id="wrapper">
