--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         <a href="">Blog</a>
         <a href="">Contact</a>
     </div>
+    <div id = nav-icons>
+        <a href="index.html"><i class="fa-solid fa-user"></i></a>
+        <a href="index.html"><i class="fa-solid fa-cart-shopping"></i></a>
+    </div>
     <div id="menu-button">≡</div>
     <div id="menu">
         <a href="index.html">Home</a>
