--- a/menu.html
+++ b/menu.html
@@ -17,6 +17,10 @@
         <a href="">Blog</a>
         <a href="">Contact</a>
     </div>
+    <div id = nav-icons>
+        <a href="index.html"><i class="fa-solid fa-user"></i></a>
+        <a href="index.html"><i class="fa-solid fa-cart-shopping"></i></a>
+    </div>
     <div id="menu-button">≡</div>
     <div id="menu">
         <a href="index.html">Home</a>
@@ -30,6 +34,8 @@
 <div id="wrapper">
     <div id="content">
         <p class="intro">Thank you for visiting our restaurant. Servos&trade; will take your order and deliver it to you. Please, choose from our menu!</p>
+        <p class="featured"><i class="fa-solid fa-star"></i> = FEATURED DISHES </p>
+        <p class="spicy"><i class="fa-solid fa-pepper-hot"></i> = SPICY DISHES </p>
         <div class="menu-items">
             <div class="item">
                 <h2><i class="collapse fa-solid fa-caret-right"></i>Sushi</h2>
@@ -39,18 +45,18 @@
                         (sushi rice and fillings rolled up in nori seaweed), nigiri sushi (shaped, bite-size mounds of sushi rice with single slices of raw fish or similar
                         draped over the top) and inarizushi (sushi rice stuffed inside pockets of inari; a type of seasoned, fried tofu).
                         This delicacy was one of the first Japanese dishes to be exported to the US after the Meiji Restoration in 1868, and since then its popularity
-                        has steadily increased year after year. </p>
+                        has steadily increased year after year.  <i class="fa-solid fa-cart-shopping"></i></p>
                 </div>
             </div>
             <div class="item">
-                <h2><i class="collapse fa-solid fa-caret-right"></i>Udon</h2>
+                <h2><i class="collapse fa-solid fa-caret-right"></i>Udon <i class="fa-solid fa-star"></i></h2>
                 <div class="desc">
                     <img src="https://images.japancentre.com/page_elements/image1s/1514/original/japanese-udon-noodles.jpg?1470240664" alt="udon">
                     <p>One of the three main noodle varieties eaten in Japan; udon noodles are thick, chewy, and traditionally made from wheat flour and brine water.
                         Udon can be served in a number of different ways (mixed into stir fries, added to hot pots, served cold with a tsuyu or tentsuyu soup base on the side for dipping), but are
                         most commonly used in noodle soups, where they are served in a savoury soup broth with different garnishes. Some of the most common udon noodle soup dishes include kitsune udon
                         (‘fox udon’, topped with aburaage fried tofu), tempura udon (topped with tempura battered seafood and vegetables), and chikara udon (‘power udon’, topped with grilled mochi
-                        rice cakes).</p>
+                        rice cakes).  <i class="fa-solid fa-cart-shopping"></i></p>
                 </div>
             </div>
             <div class="item">
@@ -60,17 +66,17 @@
                     <p>Although tofu is mainly thought of in Western countries as a health food or vegetarian alternative, in Southeast Asian countries like Japan,
                         tofu (particularly silken tofu) is enjoyed by everybody and is a common part of the traditional diet. To answer the question 'what is tofu?', it is soy milk that has been
                         coagulated, with the resulting curds being pressed into blocks. These blocks come in differing levels of firmness, and can be eaten uncooked (perhaps with a couple of savoury
-                        garnishes), boiled in hot pots, or fried into tasty pieces of aburaage and used as a garnish.</p>
+                        garnishes), boiled in hot pots, or fried into tasty pieces of aburaage and used as a garnish.  <i class="fa-solid fa-cart-shopping"></i></p>
                 </div>
             </div>
             <div class="item">
-                <h2><i class="collapse fa-solid fa-caret-right"></i>Tempura</h2>
+                <h2><i class="collapse fa-solid fa-caret-right"></i>Tempura <i class="fa-solid fa-star"></i></h2>
                 <div class="desc">
                     <img src="https://images.japancentre.com/page_elements/image1s/1516/original/fried-tempura-battered-prawns.jpg?1470240897" alt="tempura">
                     <p>If you enjoy crispy fried foods, then you will love tempura. Tempura are pieces or slices of meat, fish, and/or vegetables that have been covered in
                         a special tempura batter and deep fried until they become crunchy and pale gold in colour. Tempura tends to be made from either small shellfish like prawns, or vegetables like green
                         beans, pumpkin, daikon mooli radish, and sweet potato. Tempura can be eaten by itself (perhaps with a little grated daikon and a small dish of tsuyu for dipping), or served on top of
-                        rice bowls or noodle soups.</p>
+                        rice bowls or noodle soups.  <i class="fa-solid fa-cart-shopping"></i></p>
                 </div>
             </div>
             <div class="item">
@@ -79,17 +85,17 @@
                     <img src="https://images.japancentre.com/page_elements/image1s/1521/original/natto-fermented-soy-bean-marmite.jpg?1470241491" alt="natto">
                     <p>This traditional Japanese food is made by fermenting soy beans in a special type of bacteria that is naturally produced in the human gastrointestinal tract.
                         Natto has a strong smell similar to mouldy cheese, as well as a sticky/slimy texture that many find off-putting. However, many other people love these fermented soy beans for their full-bodied
-                        salty and savoury (or umami) flavour and their ample nutritional value.</p>
+                        salty and savoury (or umami) flavour and their ample nutritional value.  <i class="fa-solid fa-cart-shopping"></i></p>
                 </div>
             </div>
             <div class="item">
-                <h2><i class="collapse fa-solid fa-caret-right"></i>Oden</h2>
+                <h2><i class="collapse fa-solid fa-caret-right"></i>Oden <i class="fa-solid fa-pepper-hot"></i></h2>
                 <div class="desc">
                     <img src="https://images.japancentre.com/page_elements/image1s/1522/original/oden-japanese-soup-winter-hot-pot.jpg?1470241591" alt="oden">
                     <p>No cold Japanese winter would be complete without oden. This winter hot pot dish, or nabemono, is made by taking an assortment of vegetables and proteins (including
                         processed fish cakes, mochi rice cakes, boiled eggs, daikon radish, konjac yam and tofu), and stewing them in a light broth seasoned with soy sauce and dashi (a soup stock made from infusions of
                         bonito fish flakes, kombu kelp seaweed, and/or other savoury ingredients) in a large hot pot at the centre of a table. Diners can then scoop out their favourite pieces and enjoy with karashi mustard
-                        and other condiments. As well as being a hearty main meal, the simmering hot pot also serves as a communal heater on cold evenings.</p>
+                        and other condiments. As well as being a hearty main meal, the simmering hot pot also serves as a communal heater on cold evenings.  <i class="fa-solid fa-cart-shopping"></i></p>
                 </div>
             </div>
             <div class="item">
@@ -98,16 +104,16 @@
                     <img src="https://images.japancentre.com/page_elements/image1s/1517/original/yakitori-japanese-skewered-chicken.jpg?1470241052" alt="yakitori">
                     <p>With a name literally meaning ‘barbecued chicken’, yakitori are small skewers of bite-size chicken pieces seasoned with salt or brushed with a sauce, or tare,
                         of mirin rice wine, soy sauce, sake alcohol, and sugar. There are many different types of yakitori, but the most common varieties are momo (chicken thigh), negima (chicken and spring onion), and
-                        tsukune (chicken meatballs).</p>
+                        tsukune (chicken meatballs).  <i class="fa-solid fa-cart-shopping"></i></p>
                 </div>
             </div>
             <div class="item">
-                <h2><i class="collapse fa-solid fa-caret-right"></i>Donburi</h2>
+                <h2><i class="collapse fa-solid fa-caret-right"></i>Donburi <i class="fa-solid fa-star"></i></h2>
                 <div class="desc">
                     <img src="https://images.japancentre.com/page_elements/image1s/1520/original/donburi-rice-bowl.jpg?1470241437" alt="donburi">
                     <p>Donburi is made by preparing (normally by simmering or frying) various meat, fish and vegetables and serving over steamed rice in large bowls (also called 'donburi').
                         While donburi can be made using just about any assortment of ingredients, the most common types include oyakodon (simmered chicken, egg, and green onion), gyudon (sliced beef and onion simmered in a
-                        soy sauce soup base), tendon (fried tempura pieces drizzled in tsuyu), and katsudon (breaded and deep-fried pork cutlets, or tonkatsu, simmered in tsuyu with onion and egg).</p></div>
+                        soy sauce soup base), tendon (fried tempura pieces drizzled in tsuyu), and katsudon (breaded and deep-fried pork cutlets, or tonkatsu, simmered in tsuyu with onion and egg).  <i class="fa-solid fa-cart-shopping"></i></p></div>
             </div>
         </div>
     </div>
