--- a/index.html
+++ b/index.html
@@ -37,22 +37,23 @@
     </div>
     <p>WELCOME TO SERVOCAFE.</p>
 </div>
-<div id = "Home">
-    <div>
-
-        <h2>All Day Meals</h2>
-        <p>Our dish of the day is served anytime throughout the day. Just order dish of the day. Also anytime of the day teas and waters are available at your request</p>
-        <br>
-        <h2>Breakfast</h2>
-        <p>Kick start your day with breakfast at Servos. Breakfast is the most important meal of the day. We have our best prepared meals kust for you every morning. </br> Breakfast is  served from 4:00am - 11:30am</p>
-        <br>
-        <h2>Lunch</h2>
-        <p> Lunch is not an excuse to cheat for the day. Eat well and feel fantastic. Eat one healthy meal at a time. Eat a good lunch, feel good the rest of the day.
+<div id="wrapper">
+    <div id="content">
+        <div class="interior">
+            <h2>All Day Meals</h2>
+            <p>Our dish of the day is served anytime throughout the day. Just order dish of the day. Also anytime of the day teas and waters are available at your request</p>
+            <br>
+            <h2>Breakfast</h2>
+            <p>Kick start your day with breakfast at Servos. Breakfast is the most important meal of the day. We have our best prepared meals kust for you every morning. </br> Breakfast is  served from 4:00am - 11:30am</p>
+            <br>
+            <h2>Lunch</h2>
+            <p> Lunch is not an excuse to cheat for the day. Eat well and feel fantastic. Eat one healthy meal at a time. Eat a good lunch, feel good the rest of the day.
             <br>Luncheons are served from 12:00noon till 4:30pm</p>
-        <br>
-        <h2>Supper</h2>
-        <p> The dinner hour is a sacred, happy time when everyone should be together and relaxed. Book your family dinner table and let our kitchen do the magic.
+            <br>
+            <h2>Supper</h2>
+            <p> The dinner hour is a sacred, happy time when everyone should be together and relaxed. Book your family dinner table and let our kitchen do the magic.
             <br>Dinners are served from 5pm - 11pm</p>
+        </div>
     </div>
 
 </div>
