--- a/menu.html
+++ b/menu.html
@@ -12,7 +12,7 @@
     <a href="index.html"><img src="images/logo.png"></a>
     <div id="links">
         <a href="index.html">Home</a>
-        <a href="">About</a>
+        <a href="about.html">About</a>
         <a href="menu.html">Menu</a>
         <a href="">Blog</a>
         <a href="">Contact</a>
