--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="menu.html">Menu</a>
-        <a href="">Blog</a>
+        <a href="blog.html">Blog</a>
         <a href="">Contact</a>
     </div>
     <div id = nav-icons>
@@ -26,7 +26,7 @@
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="menu.html">Menu</a>
-        <a href="">Blog</a>
+        <a href="blog.html">Blog</a>
         <a href="">Contact</a>
     </div>
 </nav>
