--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Blog | ServoCafe</title>
+    <title>Blog</title>
     <link rel="stylesheet" href="fontawesome-free-6.0.0-web/css/all.css" type="text/css">
     <link rel="shortcut icon" href="images/favicon.ico"/>
     <link rel="stylesheet" href="less/style.css">
