contact page and minor tweaks
Created contact page. Some js tweaks--changed it so that the menu page items drop down by the whole header section and not just by clicking the arrows. Changed drop-down menu positioning

--- a/about.html
+++ b/about.html
@@ -12,10 +12,10 @@
     <a href="index.html"><img src="images/logo.png"></a>
     <div id="links">
         <a href="index.html">Home</a>
-        <a href="">About</a>
+        <a href="about.html">About</a>
         <a href="menu.html">Menu</a>
         <a href="blog.html">Blog</a>
-        <a href="">Contact</a>
+        <a href="contact.html">Contact</a>
     </div>
     <div id = nav-icons>
         <a href="index.html"><i class="fa-solid fa-user"></i></a>
@@ -27,7 +27,7 @@
         <a href="about.html">About</a>
         <a href="menu.html">Menu</a>
         <a href="blog.html">Blog</a>
-        <a href="">Contact</a>
+        <a href="contact.html">Contact</a>
     </div>
 </nav>
 <div id="main-about"></div>
