--- a/blog.html
+++ b/blog.html
@@ -14,8 +14,8 @@
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="menu.html">Menu</a>
-        <a href="">Blog</a>
-        <a href="">Contact</a>
+        <a href="blog.html">Blog</a>
+        <a href="contact.html">Contact</a>
     </div>
     <div id = nav-icons>
         <a href="index.html"><i class="fa-solid fa-user"></i></a>
@@ -26,8 +26,8 @@
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="menu.html">Menu</a>
-        <a href="">Blog</a>
-        <a href="">Contact</a>
+        <a href="blog.html">Blog</a>
+        <a href="contact.html">Contact</a>
     </div>
 </nav>
 <div id="column">
