--- a/menu.html
+++ b/menu.html
@@ -15,7 +15,7 @@
         <a href="about.html">About</a>
         <a href="menu.html">Menu</a>
         <a href="blog.html">Blog</a>
-        <a href="">Contact</a>
+        <a href="contact.html">Contact</a>
     </div>
     <div id = nav-icons>
         <a href="index.html"><i class="fa-solid fa-user"></i></a>
@@ -27,7 +27,7 @@
         <a href="about.html">About</a>
         <a href="menu.html">Menu</a>
         <a href="blog.html">Blog</a>
-        <a href="">Contact</a>
+        <a href="contact.html">Contact</a>
     </div>
 </nav>
 
